--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <a href="./images/Logo.png">WEBSTUDIO</a>
+      <a href="./images/Logo.png">WebStudio</a>
       <nav>
         <ul>
           <li>
@@ -23,7 +23,7 @@
       </nav>
       <address>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+        <a href="tel:+110001111111">+11(000)111-11-11</a>
       </address>
      
     </header>
@@ -35,6 +35,7 @@
       </section>
       <!-- section strategy -->
       <section>
+        <h2>Features</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
