--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <header>
-      <a href="./images/Logo.png">WebStudio</a>
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li>
             <a href="">Studio</a>
@@ -22,10 +22,15 @@
         </ul>
       </nav>
       <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+110001111111">+11(000)111-11-11</a>
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+110001111111">+11(000)111-11-11</a>
+          </li>
+        </ul>
       </address>
-     
     </header>
     <main>
       <!-- section effective solutions -->
@@ -69,7 +74,7 @@
       </section>
       <!-- section  our team -->
       <section>
-        <h2>Our team</h2>
+        <h2>Our Team</h2>
         <ul>
           <li>
             <img
@@ -115,7 +120,7 @@
       </section>
     </main>
     <footer>
-      <h4>WEBSTUDIO</h4>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
